# plint

./: .gitignore  README.md  dune-project  plint.opam  plint.toml.example
.github/workflows/: release.yml
lib/: dune  norm.ml  norm.mli
test/: dune  test_norm.ml
